Fix some layout issues with main section and articles

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -15,10 +15,5 @@ header {
   nav {
     display: inline-block;
     margin-left: 50%;
-   button {
-      padding: 1.5ex 1em;
-      border-radius: 10px;
-      background-color: gray;
-    }
   }
 }
